--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,28 +2,28 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # runs every day at midnight UTC
-  workflow_dispatch:      # allows manual run
+    - cron: "0 0 * * *"   # Runs every day at midnight UTC
+  workflow_dispatch:      # Allow manual runs
   push:
     branches:
       - main
 
 jobs:
-  generate:
+  build:
+    name: Generate Snake Animation
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
 
-      - name: Generate the snake
-        uses: Platane/snk@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Generate the snake animation
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: gureevirdi
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push the snake animation to output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
